Added Executor. Added Local Variables. Fixed logical issues. Added ExprStmtNode (Can contain expressions divided by comma and ended with ;)